--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ freezegun = "==0.3.10"
 pytest = "==3.6.2"
 pytest-coverage = "*"
 asynctest = "==0.12.2"
+codecov = "*"
 
 [requires]
 python_version = "3.6"
