--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiologger = "==0.1.1-rc1"
-async-worker = "==0.2.1-rc2"
+aiologger = "==0.1.1"
 asgard-api-sdk = "==0.3.0-rc1"
 aioelasticsearch = "==0.5.2"
+async-worker = "==0.6.0-rc1"
+health-checker = "==0.2.0"
 
 [dev-packages]
 ipdb = "==0.11"
