--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ aiologger = "==0.1.1-rc1"
 async-worker = "==0.7.0-rc1"
 asgard-api-sdk = "==0.3.0-rc1"
 aioelasticsearch = "==0.5.2"
+health-checker = "==0.2.0"
 
 [dev-packages]
 ipdb = "==0.11"
